--- a/css/style.css
+++ b/css/style.css
@@ -483,8 +483,7 @@ header {
   text-align: center;
 }
 
-#asus-content.overlay-inner,
-#ac-content.overlay-inner {
+.overlay-inner {
   display: none;
 }
 /* skills */
