--- a/css/style.css
+++ b/css/style.css
@@ -450,7 +450,9 @@ header {
   bottom: 0;
   left: 0;
   z-index: 1500;
-  display: none;
+  opacity: 0;
+  transition: all .2s ease-in;
+  pointer-events: none;
 }
 
 .overlay-inner {
